<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/pickup"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <AutoCompleteTextView
                    android:id="@+id/etPickupPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_city_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/drop"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:elevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_5sdp">

                <AutoCompleteTextView
                    android:id="@+id/etDropPoint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_city_name"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_14sdp" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSearch"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/search"
                    android:textSize="@dimen/_14sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp" />


        </LinearLayout>

        <data>

        </data>

</layout>